# ClassroomPerf

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark.cpp  pch.hpp  server.cpp
hacks/atan/: fast_avx2.hpp  fast_sse3.hpp  naive.hpp  return_zero.hpp  use_std_atan.hpp
leaderboard/atan/: b0f2-0001.json  b0f2-0002.json  b0f2-0003.json  b0f2-0004.json  ce1c-0005.json
runtime/: compile.sh
runtime/static/: index.html  make_submission.html
runtime/templates/: leaderboard.html  submission_result.html
tasks/atan/: bad_code.regex  symbol
tasks/haversine/: benchmark.cpp  symbol
